--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <img src="https://img.youtube.com/vi/rlcIA71q2lc/hqdefault.jpg" alt="NRRC AI Demo Thumbnail" style="width:100%;height:120px;object-fit:cover;border-radius:12px 12px 0 0;">
                     </a>
                     <div class="pc-body">
-                        <h3>NRRC AI — GoWide</h3>
+                        <h3>Arabic Article Finder</h3>
                         <p>Multi-stage reasoning engine for document parsing, embeddings, and retrieval with production microservices.
                         </p>
                         <p class="tags font-mono"><span>RAG</span><span>Embeddings</span><span>FastAPI</span></p>
